...
            android:text="@string/btnPerformersText"
            android:textAllCaps="false"
            android:textColor="#2E40A5"
            android:textSize="22sp"
            android:textStyle="italic|bold"
            android:textAlignment="center"
            app:layout_constraintBottom_toTopOf="@+id/buttonCollectors"
            app:layout_constraintEnd_toStartOf="@+id/buttonAlbums"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/guideline2" />

        <TextView
            android:id="@+id/buttonAlbums"
            android:layout_width="0dp"
...
